; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/peripherals/sdio/host/components/esp_slave/extr_esp_slave.c_esp_slave_get_intr_ena.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/peripherals/sdio/host/components/esp_slave/extr_esp_slave.c_esp_slave_get_intr_ena.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"get_intr_ena\00", align 1
@HOST_SLC0HOST_INT_ENA_REG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"ena: %08X\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_slave_get_intr_ena(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* @TAG, align 4
  %7 = call i32 (i32, i8*, ...) @ESP_LOGV(i32 %6, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @HOST_SLC0HOST_INT_ENA_REG, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @esp_slave_read_bytes(i32* %8, i32 %9, i32* %10, i32 4)
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* @TAG, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = load i32, i32* %13, align 4
  %15 = call i32 (i32, i8*, ...) @ESP_LOGV(i32 %12, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  %16 = load i32, i32* %5, align 4
  ret i32 %16
}

declare dso_local i32 @ESP_LOGV(i32, i8*, ...) #1

declare dso_local i32 @esp_slave_read_bytes(i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
